--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,10 @@
 #main {
     background-image: url('../assets/background.gif');
     background-size: cover;
-    height: 100vh;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    min-height: 100vh;
     padding: 0;
     margin: 0;
 }
